--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -1,7 +1,7 @@
 \chapter{Proofreading}
 Proofreaders should pay attention to spelling, grammar, style, etc.  Please refer to the Generic Style Rules and the house rules listed in \sectref{sec:houserules}.
 
-Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are in principle all acceptable. In general, however, it is preferable that proofreaders work on the online annotation platform \url{www.paperhive.org}. 
+Proofreaders can choose their preferred way of working. \textsc{pdf} comments, scanned comments on printout, or lists of errors with page numbers are in principle all acceptable. In general, however, it is preferable that proofreaders work on the online annotation platform \url{www.paperhive.org}. 
 
 \laundrybox{Proofreading text}{ 
 \laundryitem All floats are referenced.
