--- a/latexguidelines/typesetters.tex
+++ b/latexguidelines/typesetters.tex
@@ -2,19 +2,19 @@
 In order to finalize the typesetting of your volume, proceed as follows, in exactly that order:
 
 \begin{enumerate}
- \item make sure that the content of your book is absolutely final. No typos, no misrepresentations, no weird sentences should be left
- \item make again sure that the content is final 
- \item make sure title and author fit on both cover and spine. 
- \item check that all chapter titles fit the page width and on their line in the table of contents. 
- \item check that even page headers fit the page width for all chapters
- \item check that odd page headers fit the page width for all chapters
- \item (for edited volumes) check that all chapter authors have correct affiliations.
- \item (for edited volumes) check that all chapter authors fit the page width and on their line in the table of contents. Check spacing in the table of contents. 
- \item check the appearance of the table of contents
- \item check the impressum page. Is all information about authors, typesetters, proofreaders, series given?
- \item check whether all lines fit the page width. If there are lines which stick out, this is either due to missing information about hyphenation, or there is simply no good way to fit the words in one line. In the former case, add hyphenation information to the file \verb+localhyphenation.sty+. You can also prevent hyphenation of a word by putting it in an \verb+\mbox{}+. Sometimes, the only solution is to change the sentence slightly. Common operations include changing the place of an adverb or using synonyms.
- \item check whether all tables and figure fit page width (and page height). You can use \verb+\resizebox{\linewidth}{!}{stuff to resize}+ or \verb+\fitpagewidth{...}+  to make them fit.
- \item place all \verb+table+s and \verb+figure+s with the options 
+ \item Make sure that the content of your book is absolutely final. No typos, no misrepresentations, no weird sentences should be left.
+ \item Make again sure that the content is final. 
+ \item Make sure title and author fit on both cover and spine. 
+ \item Check that all chapter titles fit the page width and on their line in the table of contents. 
+ \item Check that even page headers fit the page width for all chapters.
+ \item Check that odd page headers fit the page width for all chapters.
+ \item (For edited volumes) check that all chapter authors have correct affiliations.
+ \item (For edited volumes) check that all chapter authors fit the page width and on their line in the table of contents. Check spacing in the table of contents. 
+ \item Check the appearance of the table of contents.
+ \item Check the impressum page. Is all information about authors, typesetters, proofreaders, series given?
+ \item Check whether all lines fit the page width. If there are lines which stick out, this is either due to missing information about hyphenation, or there is simply no good way to fit the words in one line. In the former case, add hyphenation information to the file \verb+localhyphenation.sty+. You can also prevent hyphenation of a word by putting it in an \verb+\mbox{}+. Sometimes, the only solution is to change the sentence slightly. Common operations include changing the place of an adverb or using synonyms.
+ \item Check whether all tables and figure fit page width (and page height). You can use \verb+\resizebox{\linewidth}{!}{...}+ or \verb+\fitpagewidth{...}+  to make them fit.
+ \item Place all \verb+table+s and \verb+figure+s with the options .
 \texttt{[h]}ere, 
 \texttt{[t]}op of page, 
 \texttt{[b]}ottom of page,
@@ -39,9 +39,9 @@ separate \texttt{[p]}age. You can use several of these options, e.g. \verb+\begi
 \laundryitem Author names fit line in toc
 \laundryitem Even page headers fit page 
 \laundryitem Odd page headers fit page 
-\laundryitem Impressum page has information about authors
-\laundryitem Impressum page has information about proofreaders
-\laundryitem Impressum page has information about typesetters
+\laundryitem Imprint page has information about authors
+\laundryitem Imprint page has information about proofreaders
+\laundryitem Imprint page has information about typesetters
 \laundryitem Series overview page has information about this title
 \laundryitem Series overview page has information about other titles in series
 \laundryitem All lines in book fit page width  
