--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -31,7 +31,7 @@ The back matter is structured as follows:
 
 \chapter{Style rules}
 \section{Generic rules}
-We use the \em Generic Style Rules for Linguistics \em available on \url{http://www.eva.mpg.de/lingua/pdf/GenericStyleRules.pdf}
+We use the \em Generic Style Rules for Linguistics \em available at \url{http://www.eva.mpg.de/lingua/pdf/GenericStyleRules.pdf}
 
 \section{House rules}\label{sec:houserules}
 The generic rules are complemented by the following house rules:
@@ -47,19 +47,18 @@ Choose one and be consistent. For edited volumes, the choice is per chapter.
 
 
 \subsection{Figures}  
-Please mention the creator and the licensing status of all photographs and all drawings in the caption unless they were created by you. The licensing must be compatible with the license chosen for the book. It is legally not possible to include restricted copyrighted material in an open access book. 
+Please mention the creator and the licensing status of all photographs and all drawings in the caption unless they were created by you. The licensing must be compatible with the license chosen for the book. For legal reasons, it is not possible to include restricted copyrighted material in an open access book. 
 
-Photographs should be in jpg format. For all drawings, maps, diagrams, etc., a vector format (*svg, *eps, *ps, *pdf) is preferred, *png is acceptable. For *jpg and *png, resolution should be at least 320 dpi. 
+Photographs should be in \textsc{jpg} format. For all drawings, maps, diagrams, etc., a vector format (\textsc{svg}, \textsc{eps}, \textsc{ps}, \textsc{pdf}) is preferred, \textsc{png} is acceptable. For \textsc{jpg} and \textsc{png}, resolution should be at least 300 dpi. 
 
 See \url{http://userblogs.fu-berlin.de/langsci-press/2016/12/12/graphics-and-images/} for more information.
 
 \subsection{Tables}
-Be aware that the book will not be printed on A4/letter paper. Our paper is 17cm x 24cm; A4 is 21cm x 29.4cm.  This means that you have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very, short like numbers, phonemes or very short words, there might be exceptions (\tabref{tab:lexicaltable}).
-
+Be aware that the book will not be printed on A4\slash letter paper. Our paper is 17cm~$\times$~24cm; A4 is 21cm~$\times$~29.4cm.  This means that you have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very short, like numbers, phonemes or very short words, there might be exceptions (\tabref{tab:lexicaltable}).
 
 
 \begin{table}
-\begin{tabularx}{\textwidth}{X>{\raggedright}XXXXX}
+\begin{tabularx}{\textwidth}{l>{\raggedright}XXXXX}
 \lsptoprule
  & English & German & French & Spanish & Italian  \\
 \midrule
@@ -81,7 +80,7 @@ Be aware that the book will not be printed on A4/letter paper. Our paper is 17cm
 
 
 \begin{table}
-\begin{tabularx}{\textwidth}{XXXXXX}
+\begin{tabularx}{\textwidth}{lXXXXX}
 \lsptoprule
  & English & German & French & Spanish & Italian  \\
 \midrule
@@ -151,11 +150,11 @@ If there are two sub-examples for a single example number, the example heading m
 \langinfo{Zulu}{}{Poulos \& Bosch 1997: 19; 63}\\
 \ea
 \gll Shay-a		inja!\\
-hit-\textsc{imp.2sg}	dog\\
+hit-\textsc{imp.\oldstylenums{2}sg}	dog\\
 \glt `Hit the dog!'
 \ex
 \gll	Mus-a	uku-shay-a	inga! \\
-	\textsc{neg.imp.aux-2sg}	\textsc{inf}-hit-\textsc{inf}	dog \\
+	\textsc{neg.imp.aux-\oldstylenums{2}sg}	\textsc{inf}-hit-\textsc{inf}	dog \\
 \glt		`Do not hit the dog!'	
 \z
 \z
@@ -182,7 +181,7 @@ You should use the numbered example environment only for linguistic examples, th
 
 \subsection{Quotations}
 
-If long passages are quoted, they should be indented and the quote should be followed by the exact reference. Use the \verb+quotation+ environment \LaTeX provides:
+If long passages are quoted, they should be indented and the quote should be followed by the exact reference. Use the \verb+quotation+ environment \LaTeX\xspace provides:
 \begin{quote}
 Precisely constructed models for linguistic structure can play an
 important role, both negative and positive, in the process of discovery 
@@ -236,22 +235,22 @@ Use color sparingly. Color should never be the only means to access information,
 \section{Citations and references}
 \label{sec-references-authors}
 
-Please deliver a \BibTeX file with all your references together with your submissions. 
-\BibTeX can be exported from all common bibliography tools (We recommend BibDesk for the Mac and JabRef for all other platforms). 
+Please deliver a \BibTeX\xspace file with all your references together with your submissions. 
+\BibTeX\xspace can be exported from all common bibliography tools (We recommend BibDesk for the Mac and JabRef for all other platforms). 
 
-Please provide all first and last names of all authors and editors. Do not use {\em et~al.}  in the \BibTeX file; this will be generated automatically when inserted.
+Please provide all first and last names of all authors and editors. Do not use ``et~al.''  in the \BibTeX\xspace file; this will be generated automatically when inserted.
 
 For bipartite family names like ``von Stechow'', ``Van Eynde'', and ``de Hoop'' make sure that these
 family names are contained in curly brackets.
 % These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
  Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
-Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: \textsc{decapitalization with protection}, or \textsc{literal output}. If you use decapitalization with protection, all titles and booktitles will be decapitalized  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The Languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
+Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: \textsc{decapitalization with protection}, or \textsc{literal output}. If you use decapitalization with protection, all titles and booktitles will be decapitalized.  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The Languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
 
-If you opt for literal output, add the option \verb+undecapitalize+ to \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography (\verb+title = {The languages of Africa}+). You cannot use your *bib file for publishers which require Title Case anymore. 
+If you opt for literal output, add the option \verb+undecapitalize+ to \verb+\documentclass+ in \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography (\verb+title = {The languages of Africa}+). You cannot use your *bib file for publishers which require Title Case anymore. 
 
-The references in your \BibTeX file will automatically be typeset correctly. So, provided the
-\BibTeX file is correct, authors do not have to worry about this. But there are some things to
+The references in your \BibTeX\xspace file will automatically be typeset correctly. So, provided the
+\BibTeX\xspace file is correct, authors do not have to worry about this. But there are some things to
 observe in the main text. Please cite as shown in Table~\ref{tab-citation}.
 
 \begin{table}[bt] 
@@ -289,7 +288,7 @@ the normal punctuation of the respective language rather than special markup lik
 % full information.  
 
 \section{Indexes}
-All {\lsp} books have a Subject Index and a Name Index. The Language Index is optional and should be used if the book treats several languages. Subject Index and Language Index have to be prepared by the authors. We can automatize some of this if you send us a list of languages and a list of subject terms. You might want to try \url{sketchengine.co.uk} to compile a candidate list. 
+All {\lsp} books have a Subject Index and a Name Index. The Language Index is optional and should be used if the book treats several languages. Subject Index and Language Index have to be prepared by the authors. We can automatize some of this if you send us a list of languages and a list of subject terms. You might want to try \url{http://sketchengine.co.uk} to compile a candidate list. 
 
 The Name Index is generated automatically from the citations in the text. This means that you only have to add people to the Name Index who, for whatever reason, are mentioned without connection to a work in the list of references. Examples would be politicians, ancient philosophers, novelists and the like.
  
