minor corrections & compiled doc

--- a/latexguidelines/localpackages.tex
+++ b/latexguidelines/localpackages.tex
@@ -5,3 +5,5 @@
 \usepackage{amsmath,amssymb}
 \usepackage{tikz}
 \usepackage{pgfplots}
+\usepackage{langsci/styles/langsci-gb4e}
+\usepackage{langsci/styles/langsci-optional}
