--- a/latexguidelines/localcommands.tex
+++ b/latexguidelines/localcommands.tex
@@ -1,5 +1,3 @@
-\newcommand{\latex}{Latex}
-\newcommand{\bibtex}{Bibtex}
 \newcommand{\iw}{}
 \newcommand{\laundryitem}{
 \medskip 
@@ -9,4 +7,9 @@
 
 \renewcommand{\hspaceThis}[1]{\hphantom{#1}}
 
-
+\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+    
+\let\bibtex\BibTeX
+\let\BibTex\BibTeX
+\let\latex\LaTeX
