--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -13,17 +13,9 @@
 \subtitle{Complete set of guidelines}
 \BackTitle{Language Science Press guidelines}  
  
-\usepackage{langsci/styles/langsci-gb4e}
-\usepackage{langsci/styles/langsci-optional} 
-\usepackage{listings}
-\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
-    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
-    
-\let\bibtex\BibTeX
-\let\BibTex\BibTeX
-\let\latex\LaTeX
-% \input{localpackages.tex}
-% \input{localcommands.tex}
+\input{localpackages.tex}
+\input{localcommands.tex}
+\bibliography{lsp-abbrev,lsp-guidelines}
 \begin{document}                
 \maketitle                
 \tableofcontents      
@@ -65,6 +57,3 @@
 \printindex[sbj]
                      
 \end{document}
-      
-
-
