recompile for 2017 edition

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -178,6 +178,9 @@ If an example consists of several sub-examples from different languages, the lan
 
 You should use the numbered example environment only for linguistic examples, theorems and the like. Lists of consultants, lists of recordings, lists of geographical places where a language is spoken and the like should be put in a table environment. 
 
+Example sentences are in italics/roman depending on the subcommunity. Currently, Studies in Diversity Linguistics uses italics while all other series use roman.
+
+
 
 \subsection{Quotations}
 
@@ -227,7 +230,9 @@ For phonetic symbols of aspiration and secondary articulation, do not use a supe
 You should not use footnotes in section titles.\footnote{The footnote about \sectref{sec:footnote} can easily be added after the first sentence of the running text.} Very often, a plain sentence in the running text will be just as good. If you really want a footnote, insert it after the first sentence of the relevant section.
 
 \subsection{Color}
-Use color sparingly. Color should never be the only means to access information, but can be used as an addition. There are two reasons for this: b/w printers and colorblind people. Your work will not be accessible in those cases if color is the only distinguishing feature. Alternatives to color are using different shapes or shadings instead of color, grouping items, or verbal description. 
+Use color sparingly. Color should never be the only means to access information, but can be used as an addition. 
+% There are two reasons for this: b/w printers and colorblind people. Your work will not be accessible in those cases if color is the only distinguishing feature. 
+Alternatives to color are using different shapes or shadings instead of color, grouping items, or verbal description. 
 
 
 
