--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -18,7 +18,7 @@ Proofreaders can choose their preferred way of working. \textsc{pdf} comments, s
 \laundryitem Examples which are full sentences finish with punctuation in both source and translation.
 \laundryitem Examples which are not full sentences do not have a punctuation mark in source or translation.
 \laundryitem Alignment of glossed examples is correct.
-\laundryitem All examples have information about language and source. 
+% \laundryitem All examples have information about language and source. 
 }
 
 
