--- a/latexguidelines/typesetters.tex
+++ b/latexguidelines/typesetters.tex
@@ -32,7 +32,8 @@ separate \texttt{[p]}age. You can use several of these options, e.g. \verb+\begi
 
 \laundrybox{Typesetting}{
 \laundryitem Content fits on title page
-\laundryitem ISBN is on back title
+\laundryitem Content fits on back page
+% \laundryitem ISBN is on back title
 \laundryitem Content fits on spine
 \laundryitem Chapter titles fit toc
 \laundryitem Author names fit line below chapter titles
